--- a/blog/blog.css
+++ b/blog/blog.css
@@ -253,6 +253,7 @@ h2, h3, h4, .stream-entry {
     border-radius: 4px;
     font-family: var(--font-main), 'Menlo', monospace;
     font-size: 16px;
+    white-space: pre-wrap;
 }
 
 .post-content ul, .post-content ol {
@@ -410,9 +411,9 @@ h2, h3, h4, .stream-entry {
         line-height: 1.6;
         padding-right: 5px;
         padding-left: 5px;
-        max-width: 100vw;
+        max-width: 100vw;    
     }
-    
+
     .post-content h2 {
         font-size: 28px;
     }
