Add dark mode functionality with dark-init.js and update styles

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{{page.title}} - Indigo Nolan</title>
 		<link rel="stylesheet" href="{{ '/stylesheet.css' | relative_url }}">
-
+		<script src="{{ '/js/dark-init.js' | relative_url }}"></script>
         <link rel="stylesheet" href="{{'/blog/blog.css' | relative_url }}">
 		<link rel="icon" type="image/x-icon" href="../../favicon.ico">
 		
