--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
         <meta name="description" content="Portfolio of projects by Indigo Nolan including CashCat budgeting app, Fantasteroids game, web development tools, and open source contributions."/>
 		<meta name="keywords" content="Indigo Nolan, portfolio, projects, CashCat, Fantasteroids, web development, game development, open source"/>
 		<meta name="author" content="Indigo Nolan"/>
+        
+        <script src="{{ '/js/dark-init.js' | relative_url }}"></script>
 		
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
