Add theme toggle functionality and styles: implement dropdown in BLOG for topic selection

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,5 +93,6 @@
 			</section>
         
         <script src="{{ '../js/dark.js' | relative_url }}"></script>
+        <script src="{{'../js/themes.js' | relative_url}}"></script>
     </body>
 </html>
