--- a/stylesheet.css
+++ b/stylesheet.css
@@ -972,7 +972,7 @@ main {
 @media (max-width: 768px) {
 
 	.featured-image {
-		height: 170px;
+		height: 100px;
 	 }
 
 	.featured-project {
@@ -1092,7 +1092,7 @@ main {
 	}
 
 	.project-image {
-		height: 150px;
+		height: 120px;
 		margin-bottom: 12px;
 	}
 
@@ -1323,19 +1323,22 @@ main {
 
 /* Status item animations with staggered delays */
 .status-updates.expanded .status-content ul li:nth-child(1) {
-	animation: slideInUp 0.6s ease-out 0.2s both;
+	animation: slideInUp 0.6s ease-out 0s both;
 }
 
 .status-updates.expanded .status-content ul li:nth-child(2) {
-	animation: slideInUp 0.6s ease-out 0.3s both;
+	animation: slideInUp 0.6s ease-out 0.1s both;
 }
 
 .status-updates.expanded .status-content ul li:nth-child(3) {
-	animation: slideInUp 0.6s ease-out 0.4s both;
+	animation: slideInUp 0.6s ease-out 0.2s both;
 }
 
 .status-updates.expanded .status-content ul li:nth-child(4) {
-	animation: slideInUp 0.6s ease-out 0.5s both;
+	animation: slideInUp 0.6s ease-out 0.3s both;
+}
+.status-updates.expanded .status-content ul li:nth-child(5) {
+	animation: slideInUp 0.6s ease-out 0.4s both;
 }
 
 @keyframes slideInUp {
